chore(social-sharing): stop hiding the copy link button on mobile

--- a/src/components/common/social-sharing.module.scss
+++ b/src/components/common/social-sharing.module.scss
@@ -29,9 +29,3 @@
     @include link-focus-dark-bg;
   }
 }
-
-.hide-on-mobile {
-  @media (max-width: $viewport-lg) {
-    display: none;
-  }
-}
